--- a/Fantasy FIghting Game.vcxproj
+++ b/Fantasy FIghting Game.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{e5167e8a-1681-4a72-8b91-75b4c7250a65}</ProjectGuid>
     <RootNamespace>FantasyFIghtingGame</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Fantasy Fighting Game</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
